@@ -8,6 +8,7 @@
 2018-04-12 mmichaud <m.michael.michaud@orange.fr>
   * Fix #473 : shapefile driver no more limited to 4G files
   * Fix #471 : small bug in PostGIS (new) driver UI
+  * Fix #470 : fix transaction manager management (more tests needed)
 
 2018-04-07 Giuseppe Aruta
 
